[gd_scene load_steps=11 format=3 uid="uid://bf7qonhrj13f0"]

[ext_resource type="PackedScene" uid="uid://dxq2uyf68mxsy" path="res://scenes/enemies/enemy.tscn" id="1_qog6p"]
[ext_resource type="Script" path="res://scripts/enemies/skeleton_hand/skeleton_hand.gd" id="2_7n62p"]
[ext_resource type="Texture2D" uid="uid://mati2vh1smdu" path="res://sprites/enemies/skeleton_hand.png" id="2_ue2db"]
[ext_resource type="Script" path="res://scripts/state_machine/state_manager.gd" id="4_f5wrm"]
[ext_resource type="Script" path="res://scripts/enemies/skeleton_hand/states/idle.gd" id="5_0ehus"]
[ext_resource type="Script" path="res://scripts/enemies/skeleton_hand/states/jump.gd" id="6_nx6s1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6qpea"]
size = Vector2(4, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k3gdp"]
size = Vector2(10, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwi64"]
size = Vector2(12, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dmtkx"]
size = Vector2(48, 32)

[node name="SkeletonHand" instance=ExtResource("1_qog6p")]
script = ExtResource("2_7n62p")
max_health = 2

[node name="VisibleOnScreenEnabler2D" parent="." index="0"]
position = Vector2(0, -8)
scale = Vector2(0.6, 0.8)

[node name="Collider" parent="." index="1"]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_6qpea")

[node name="Sprite" parent="." index="2"]
position = Vector2(0, -9)
texture = ExtResource("2_ue2db")
hframes = 3

[node name="Collider" parent="Hitbox" index="0"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_k3gdp")

[node name="Collider" parent="Hurtbox" index="0"]
position = Vector2(0, -8.5)
shape = SubResource("RectangleShape2D_bwi64")

[node name="PlayerDetection" type="Area2D" parent="." index="5"]
collision_layer = 4
collision_mask = 2

[node name="Collider" type="CollisionShape2D" parent="PlayerDetection" index="0"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_dmtkx")

[node name="StateManager" type="Node" parent="." index="6"]
script = ExtResource("4_f5wrm")

[node name="Idle" type="Node" parent="StateManager" index="0"]
script = ExtResource("5_0ehus")

[node name="Jump" type="Node" parent="StateManager" index="1"]
script = ExtResource("6_nx6s1")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
